--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,25 @@
 {
   "name": "backend",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "tsx watch ./src/index.ts --env-file=.env"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "typescript": "~5.9.3",
-    "vite": "^7.1.7"
+    "@eslint/js": "^9.37.0",
+    "@types/express": "^5.0.3",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.0"
+  },
+  "dependencies": {
+    "express": "5.1.0"
   }
 }
