--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.37.0",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
     "tsx": "^4.20.6",
@@ -20,6 +22,8 @@
     "typescript-eslint": "^8.46.0"
   },
   "dependencies": {
-    "express": "5.1.0"
+    "bcryptjs": "^3.0.2",
+    "express": "5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
