--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,22 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@types/bcryptjs": "^3.0.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.7.2",
     "eslint": "^9.37.0",
     "globals": "^16.4.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "express": "5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1"
   }
 }
