--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/index.ts --env-file=.env"
+    "dev": "tsx watch --env-file=.env ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +28,6 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1"
