--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@types/node": "^24.9.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "classnames": "^2.5.1",
     "eslint": "^9.37.0",
