--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file=.env ./src/index.ts"
+    "dev": "tsx watch --env-file=.env ./src/index.ts",
+    "seed-vehicles": "npx tsx --env-file=./.env  ./src/scripts/seeds/setVehicles.ts"
   },
   "keywords": [],
   "author": "",
