--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
